--- a/cis-benchmarks/kube-bench-plugin.yaml
+++ b/cis-benchmarks/kube-bench-plugin.yaml
@@ -20,9 +20,10 @@ podSpec:
   - name: etc-kubernetes
     hostPath:
       path: "/etc/kubernetes"
-  - name: usr-bin
-    hostPath:
-      path: "/usr/bin"
+  # Uncomment this volume definition if you wish to use Kubernetes version auto-detection in kube-bench.
+  # - name: usr-bin
+  #   hostPath:
+  #     path: "/usr/bin"
   affinity:
     nodeAffinity: 
       requiredDuringSchedulingIgnoredDuringExecution: 
@@ -39,8 +40,21 @@ spec:
   - /bin/sh
   args:
   - -c
-  - kube-bench --version 1.13 --outputfile /tmp/results/output.xml --junit ; echo -n /tmp/results/output.xml > /tmp/results/done ; while true; do echo "Sleeping for 1h to avoid daemonset restart"; sleep 3600; done
-  image: aquasec/kube-bench:0.2.1
+  - /run-kube-bench.sh; while true; do echo "Sleeping for 1h to avoid daemonset restart"; /bin/sleep 3600; done
+  env:
+    - name: KUBERNETES_VERSION
+      value: "1.17"
+    - name: TARGET_MASTER
+      value: "false"
+    - name: TARGET_NODE
+      value: "true"
+    - name: TARGET_CONTROLPLANE
+      value: "false"
+    - name: TARGET_ETCD
+      value: "false"
+    - name: TARGET_POLICIES
+      value: "false"
+  image: sonobuoy/kube-bench:0.2.3
   name: plugin
   resources: {}
   volumeMounts:
@@ -54,8 +68,8 @@ spec:
     mountPath: /etc/systemd
   - name: etc-kubernetes
     mountPath: /etc/kubernetes
-    # /usr/bin is mounted to access kubectl / kubelet, for auto-detecting the Kubernetes version. 
-    # You can omit this mount if you specify --version as part of the command.           
-  - name: usr-bin
-    mountPath: /usr/bin
+  # /usr/bin is mounted to access kubectl / kubelet, used by kube-bench for auto-detecting the Kubernetes version. 
+  # You can omit this mount if you provide the version using the KUBERNETES_VERSION environment variable.           
+  # - name: usr-bin
+  #   mountPath: /usr/bin
 
