--- a/cis-benchmarks/kube-bench-master-plugin.yaml
+++ b/cis-benchmarks/kube-bench-master-plugin.yaml
@@ -14,6 +14,9 @@ podSpec:
   - name: var-lib-kubelet
     hostPath:
       path: "/var/lib/kubelet"
+  - name: lib-systemd
+    hostPath:
+      path: "/lib/systemd"
   - name: etc-systemd
     hostPath:
       path: "/etc/systemd"
@@ -66,6 +69,8 @@ spec:
     mountPath: /var/lib/kubelet
   - name: etc-systemd
     mountPath: /etc/systemd
+  - name: lib-systemd
+    mountPath: /lib/systemd
   - name: etc-kubernetes
     mountPath: /etc/kubernetes
   # /usr/bin is mounted to access kubectl / kubelet, used by kube-bench for auto-detecting the Kubernetes version.
