--- a/cis-benchmarks/eks/kube-bench-plugin.yaml
+++ b/cis-benchmarks/eks/kube-bench-plugin.yaml
@@ -8,12 +8,15 @@ podSpec:
   tolerations:
   - operator: Exists
   volumes:
-  - name: var-vcap-jobs
+  - name: var-lib-etcd
     hostPath:
-      path: "/var/vcap/jobs"
-  - name: var-vcap-data
+      path: "/var/lib/etcd"
+  - name: var-lib-kubelet
     hostPath:
-      path: "/var/vcap/data"
+      path: "/var/lib/kubelet"
+  - name: etc-systemd
+    hostPath:
+      path: "/etc/systemd"
   - name: etc-kubernetes
     hostPath:
       path: "/etc/kubernetes"
@@ -40,7 +43,7 @@ spec:
   - /run-kube-bench.sh; while true; do echo "Sleeping for 1h to avoid daemonset restart"; /bin/sleep 3600; done
   env:
     - name: KUBERNETES_VERSION
-      value: "1.17"
+      value: "1.15"
     - name: TARGET_MASTER
       value: "false"
     - name: TARGET_NODE
@@ -50,20 +53,25 @@ spec:
     - name: TARGET_ETCD
       value: "false"
     - name: TARGET_POLICIES
-      value: "false"
+      value: "true"
+    - name: TARGET_MANAGED_SERVICES
+      value: "true"
     - name: DISTRIBUTION
-      value: "entpks"
+      value: "eks"
   image: sonobuoy/kube-bench:0.3.1
   name: plugin
   resources: {}
   volumeMounts:
   - mountPath: /tmp/results
     name: results
-  - name: var-vcap-jobs
-    mountPath: /var/vcap/jobs
+  - name: var-lib-etcd
+    mountPath: /var/lib/etcd
     readOnly: true
-  - name: var-vcap-data
-    mountPath: /var/vcap/data
+  - name: var-lib-kubelet
+    mountPath: /var/lib/kubelet
+    readOnly: true
+  - name: etc-systemd
+    mountPath: /etc/systemd
     readOnly: true
   - name: etc-kubernetes
     mountPath: /etc/kubernetes
@@ -71,6 +79,6 @@ spec:
   # /usr/bin is mounted to access kubectl / kubelet, used by kube-bench for auto-detecting the Kubernetes version.
   # It is mounted at the path /usr/local/mount-from-host/bin to avoid overwriting /usr/bin within the container.
   # You can omit this mount if you provide the version using the KUBERNETES_VERSION environment variable.
-  # - name: usr-bin
+  # - name: lib-systemd
   #   mountPath: /usr/local/mount-from-host/bin
   #   readOnly: true
