--- a/cis-benchmarks/eks/kube-bench-plugin.yaml
+++ b/cis-benchmarks/eks/kube-bench-plugin.yaml
@@ -6,17 +6,20 @@ podSpec:
   hostPID: true
   serviceAccountName: sonobuoy-serviceaccount
   tolerations:
-  - operator: Exists
+    - operator: Exists
   volumes:
-  - name: var-vcap-jobs
-    hostPath:
-      path: "/var/vcap/jobs"
-  - name: var-vcap-data
-    hostPath:
-      path: "/var/vcap/data"
-  - name: etc-kubernetes
-    hostPath:
-      path: "/etc/kubernetes"
+    - name: var-lib-etcd
+      hostPath:
+        path: "/var/lib/etcd"
+    - name: var-lib-kubelet
+      hostPath:
+        path: "/var/lib/kubelet"
+    - name: etc-systemd
+      hostPath:
+        path: "/etc/systemd"
+    - name: etc-kubernetes
+      hostPath:
+        path: "/etc/kubernetes"
   # Uncomment this volume definition if you wish to use Kubernetes version auto-detection in kube-bench.
   # - name: usr-bin
   #   hostPath:
@@ -25,22 +28,22 @@ podSpec:
     nodeAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
-        - matchExpressions:
-          - key: node-role.kubernetes.io/master
-            operator: DoesNotExist
+          - matchExpressions:
+              - key: node-role.kubernetes.io/master
+                operator: DoesNotExist
 sonobuoy-config:
   driver: DaemonSet
   plugin-name: kube-bench-node
   result-format: junit
 spec:
   command:
-  - /bin/sh
+    - /bin/sh
   args:
-  - -c
-  - /run-kube-bench.sh; while true; do echo "Sleeping for 1h to avoid daemonset restart"; /bin/sleep 3600; done
+    - -c
+    - /run-kube-bench.sh; while true; do echo "Sleeping for 1h to avoid daemonset restart"; /bin/sleep 3600; done
   env:
     - name: KUBERNETES_VERSION
-      value: "1.17"
+      value: "1.15"
     - name: TARGET_MASTER
       value: "false"
     - name: TARGET_NODE
@@ -51,26 +54,31 @@ spec:
       value: "false"
     - name: TARGET_POLICIES
       value: "false"
+    - name: TARGET_MANAGED_SERVICES
+      value: "false"
     - name: DISTRIBUTION
-      value: "entpks"
+      value: "eks"
   image: sonobuoy/kube-bench:0.3.1
   name: plugin
   resources: {}
   volumeMounts:
-  - mountPath: /tmp/results
-    name: results
-  - name: var-vcap-jobs
-    mountPath: /var/vcap/jobs
-    readOnly: true
-  - name: var-vcap-data
-    mountPath: /var/vcap/data
-    readOnly: true
-  - name: etc-kubernetes
-    mountPath: /etc/kubernetes
-    readOnly: true
+    - mountPath: /tmp/results
+      name: results
+    - name: var-lib-etcd
+      mountPath: /var/lib/etcd
+      readOnly: true
+    - name: var-lib-kubelet
+      mountPath: /var/lib/kubelet
+      readOnly: true
+    - name: etc-systemd
+      mountPath: /etc/systemd
+      readOnly: true
+    - name: etc-kubernetes
+      mountPath: /etc/kubernetes
+      readOnly: true
   # /usr/bin is mounted to access kubectl / kubelet, used by kube-bench for auto-detecting the Kubernetes version.
   # It is mounted at the path /usr/local/mount-from-host/bin to avoid overwriting /usr/bin within the container.
   # You can omit this mount if you provide the version using the KUBERNETES_VERSION environment variable.
-  # - name: usr-bin
+  # - name: lib-systemd
   #   mountPath: /usr/local/mount-from-host/bin
   #   readOnly: true
