--- a/examples/e2e-skeleton/plugin.yaml
+++ b/examples/e2e-skeleton/plugin.yaml
@@ -1,29 +1,20 @@
-podSpec:
-  containers: []
-  nodeSelector:
-    kubernetes.io/os: linux
-  restartPolicy: Never
-  serviceAccountName: sonobuoy-serviceaccount
-  tolerations:
-  - effect: NoSchedule
-    key: node-role.kubernetes.io/master
-    operator: Exists
-  - key: CriticalAddonsOnly
-    operator: Exists
-  - key: kubernetes.io/e2e-evict-taint-key
-    operator: Exists
 sonobuoy-config:
   driver: Job
   plugin-name: custom-e2e
-  result-format: raw
+  result-format: go-json
 spec:
   command:
   - bash
-  args: ["-c","go tool test2json ./custom.test -test.v > /tmp/results/out.json && echo '/tmp/results/out.json' > /tmp/results/done"]
-  image: schnake/custome2e:v1
+  args: ["-c","go tool test2json ./custom.test -test.v | tee ${SONOBUOY_RESULTS_DIR}/out.json ; echo ${SONOBUOY_RESULTS_DIR}/out.json > ${SONOBUOY_RESULTS_DIR}/done"]
+  image: schnake/custome2e:v0.2.0
+  env:
+  - name: NS_PREFIX
+    value: custom
+  - name: SONOBUOY_PROGRESS_PORT
+    value: "8099"
   name: plugin
   resources: {}
   volumeMounts:
-  - mountPath: /tmp/results
+  - mountPath: /tmp/sonobuoy/results
     name: results
 
