Fix results type
Signed-off-by: John Schnake <jschnake@vmware.com>

--- a/examples/e2e-skeleton/plugin.yaml
+++ b/examples/e2e-skeleton/plugin.yaml
@@ -1,7 +1,7 @@
 sonobuoy-config:
   driver: Job
   plugin-name: custom-e2e
-  result-format: go-json
+  result-format: gojson
 spec:
   command:
   - bash
