First entry for a list exposing plugins to Sonobuoy CLI
- Adds list.yaml with some (not all) of the plugins to expose
- Updates some of the yaml files with URLs and descriptions

This will expand/change as we develop this feature but we need
something here to just iterate with.

Signed-off-by: John Schnake <jschnake@vmware.com>

--- a/e2e/e2e.yaml
+++ b/e2e/e2e.yaml
@@ -16,6 +16,8 @@ sonobuoy-config:
   driver: Job
   plugin-name: e2e
   result-format: junit
+  source_url: https://raw.githubusercontent.com/vmware-tanzu/sonobuoy-plugins/main/e2e/e2e.yaml
+  description: The end-to-end tests maintained by Kubernetes to test the health of your cluster.
 spec:
   command:
   - /run_e2e.sh
