--- a/examples/e2e-skeleton/plugin.yaml
+++ b/examples/e2e-skeleton/plugin.yaml
@@ -2,6 +2,8 @@ sonobuoy-config:
   driver: Job
   plugin-name: custom-e2e
   result-format: gojson
+  source_url: https://raw.githubusercontent.com/vmware-tanzu/sonobuoy-plugins/main/examples/e2e-skeleton/plugin.yaml
+  description: An easy to start from project for making K8s aware tests.
 spec:
   command:
   - bash
