cis-benchmarks: Use env var instead of hardcoded path
Similar to other plugins, the env var for results path should
be used instead of the hardcoded path in case the user is specifying
another directory. Sonobuoy ensures the plugin uses the intended
mount regardless of what is hardcoded into the plugin definition.

Signed-off-by: John Schnake <jschnake@vmware.com>

--- a/cis-benchmarks/kube-bench-master-plugin.yaml
+++ b/cis-benchmarks/kube-bench-master-plugin.yaml
@@ -61,7 +61,7 @@ spec:
   name: plugin
   resources: {}
   volumeMounts:
-  - mountPath: /tmp/results
+  - mountPath: /tmp/sonobuoy/results
     name: results
   - name: var-lib-etcd
     mountPath: /var/lib/etcd
