--- a/sonoshell/sonoshell.yaml
+++ b/sonoshell/sonoshell.yaml
@@ -1,3 +1,19 @@
+config-map:
+  test.yaml: |
+    name: test-suite-1
+    tests:
+      - name: "Tests returning 0 should pass"
+        cmd: "true"
+      - name: "Tests returning nonzero should fail"
+        cmd: "false"
+      - name: "Multiline tests should pass as expected"
+        cmd: |
+          echo "this should be fine"
+          echo "the overall test should pass"
+      - name: "Multiline tests should fail as expected"
+        cmd: |
+          echo "this should fail now"
+          ls ~ | grep nonexistant_file_9
 sonobuoy-config:
   driver: DaemonSet
   plugin-name: sonoshell
@@ -5,10 +21,10 @@ sonobuoy-config:
   result-files:
   - sonoshell.yaml
 spec:
+  command:
+    - ./sonoshell
+  args:
+    - "$(SONOBUOY_CONFIG_DIR)/test.yaml"
   image: laevos/sonoshell:latest
   name: plugin
   resources: {}
-  volumeMounts:
-  - mountPath: /tmp/sonobuoy/results
-    name: results
-
