Put warning in test.yaml and hide it
Signed-off-by: Lilith McMullen <lmcmullen@twitter.com>

--- a/sonoshell/Dockerfile
+++ b/sonoshell/Dockerfile
@@ -12,6 +12,6 @@ RUN go build -o sonoshell ./pkg
 FROM debian:buster-slim
 
 COPY --from=build /_sonoshell/sonoshell /sonoshell
-COPY ./test.yaml /test.yaml
+COPY ./.test.yaml /test.yaml
 
 CMD ["/sonoshell", "/test.yaml"]
