--- a/reliability-scanner/plugin/base.yaml
+++ b/reliability-scanner/plugin/base.yaml
@@ -1,16 +1,16 @@
 sonobuoy-config:
-    driver: Pod
+    driver: Job
     plugin-name: reliability-scanner
-    result-format: yaml
+    result-format: raw
 spec:
-- command: ["/bin/reliability-scanner", "scan"]
+  command: ["/bin/reliability-scanner", "scan"]
   env:
   - name: CONFIG
     valueFrom:
       configMapKeyRef:
         name: reliability-scanner-cm
         key: reliability-scanner.yaml
-  image: projects.registry.vmware.com/cre/reliability-scanner:v0.1.3
+  image: projects.registry.vmware.com/cre/reliability-scanner:v0.1.4
   name: plugin
   resources: {}
   volumeMounts:
