Add version command and necessary build steps
 - Uses go generate and go embed to put version and sha information
into the binary/image.
 - Adds version command that prints out a json object with the buildinfo
 - Adds a self-documenting makefile with these steps

Fixes #127

Signed-off-by: John Schnake <jschnake@vmware.com>

--- a/sonolark/Dockerfile
+++ b/sonolark/Dockerfile
@@ -10,7 +10,7 @@ COPY ./lib /src/lib
 COPY ./cmd /src/cmd
 
 RUN --mount=type=cache,target=/root/.cache/go-build \
-    GOOS=linux GOARCH=amd64 go build -o sonolark .
+    GOOS=linux GOARCH=amd64 go generate ./... && go build -o sonolark .
 
 FROM gcr.io/distroless/static:nonroot as dist
 
