Add basic github action for running plugin-specific tests
This allows us to check which files changed and then trigger the proper
set of tests.

Signed-off-by: John Schnake <jschnake@vmware.com>

--- a/sonolark/Makefile
+++ b/sonolark/Makefile
@@ -12,7 +12,7 @@ build_image: generate ## Builds the docker image
 	@echo "Building docker image..."
 	docker build -t $(DOCKER_REGISTRY)/sonolark:$(TAG) .
 
-test: ## Runs go tests
+test: clean generate ## Runs go tests
 	@echo "Running go test ./..."
 	go test ./...
 
